--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
+    "date-fns": "^2.29.1",
     "faker": "^6.6.6",
     "next": "^12.1.6",
     "react": "^18.2.0",
